# marvel-msn

./: .coveragerc  .gitattributes  .gitignore  AGENTS.md  Blackbird.rep  CLAUDE.md  Makefile  PROTOCOL.md  README.md  RE_STATUS.md  TODO.md  at_responder.py  capture_dirsrv_iids.py  debug_mpccl.gdb  debug_mpccl.py  gdb_debug.py  phonebook.txt  pyproject.toml  server.py  socat.sh  trace_fget.py  watch_signout.py
MSN95.rep/: project.prp  projectState
binaries_de/: BBSNAV.NAV  DSNAV.NAV  DSNED.NED  GUIDENAV.NAV  INSTBE.BAT  PHONE.PBK  STATE.PBK
docs/: BINARIES.md  BLACKBIRD.md  DIRSRV_GETCHILDREN_CLIENT_PATH.md  DSNAV.md  GUIDENAV.md  JOURNAL.md  KNOWN-CONTENT.md  MEDVIEW.md  MOSSHELL.md  MOSVIEW-RENDER-PIPELINE.md  MOSVIEW.md  MSN_CENTRAL_HOMEBASE_MENU_MAPPING.md  TREENVCL.md  blackbird-title-format.md  cbframe-cbform-sec06-mapping.md  ccontent.md  cvform-page-objects.md  medview-service-contract.md  mosview-authored-text-and-font-re.md  mosview-mediaview-format.md  typography-lowering-plan.md
reference/: What is “Blackbird”_.html
resources/: shell32_icons.res
scratch/: medview-gap-worksheet.md
scratch-re.rep/: project.prp
script_tests/: test_synthesize_m14_from_ttl.py
scripts/: annotate-walk.py  auto-plate.py  auto-rename-wrappers.py  deep-annotate.py  dump_dwords.py  dump_listing_range.py  dump_vtable.py  find_string_xrefs.py  inspect_blackbird_title.py  inspect_mediaview_cache.py  list_callers.py  list_functions_range.py  list_refs_to.py  merge_ghidra_annotations.py  render-graph.py  synthesize_m14_from_ttl.py
server/: __init__.py  __main__.py  config.py  (+7 more)
(+385 files in other folders)
