[project]
name = "marvel-msn"
version = "0.1.0"
description = "MSN95 (Marvel) reverse-engineered server"
requires-python = ">=3.12"
dependencies = [
    "olefile>=0.46",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "coverage>=7.6",
    "pyte>=0.8",
]

[project.scripts]
msn-server = "server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.coverage.run]
source = ["src/server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
